fix close icon for videos on smaller screens

--- a/assets/css/_resources.styl
+++ b/assets/css/_resources.styl
@@ -42,3 +42,6 @@
   background-repeat no-repeat
   background-position center
   border-radius 2px
+  +below(900px)
+    top -40px
+    right 0px
